force-app/main/default/objects/Asset/recordTypes/Graphic_Card.recordType-meta.xml
<RecordType>
    <fullName>Graphic_Card</fullName>
    <active>true</active>
    <label>Graphic Card</label>
</RecordType>