force-app/main/default/objects/Asset/recordTypes/Motherboard.recordType-meta.xml
<RecordType>
    <fullName>Motherboard</fullName>
    <active>true</active>
    <label>Motherboard</label>
</RecordType>