force-app/main/default/objects/Asset/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <label>Other</label>
</RecordType>