force-app/main/default/objects/Asset/recordTypes/Processor.recordType-meta.xml
<RecordType>
    <fullName>Processor</fullName>
    <active>true</active>
    <label>Processor</label>
</RecordType>